# relayfetch

./: Cargo.toml  LICENSE  Readme.md  Readme_ZH.md  systemd
.github/workflows/: build-deb.yml  build_bin.yml  build_deb.yml
config/: config.toml
package/arch/: .gitignore  PKGBUILD.bin.in  PKGBUILD.src.in  config.toml  generate.sh  relayfetch.install  relayfetch.service
package/deb/DEBIAN/: contorl  postinst  postrm  prerm
package/deb/etc/relayfetch/: config.toml  files.toml
proto/: management.proto
relayfetch/: Cargo.toml  build.rs
relayfetch/proto/: management.proto
relayfetch/src/: main.rs  management.rs  meta.rs  server.rs  signal.rs  sync.rs
relayfetch/src/config/: config.rs  file.rs  mod.rs
relayfetch/src/management/: mod.rs  utils.rs
relayfetch/src/management/core/: dto.rs  error.rs  mod.rs
relayfetch/src/management/grpc/: adapter.rs  mod.rs
relayfetch/src/management/http/: adapter.rs  mod.rs  models.rs
relayfetch/src/sync/: mod.rs
relayfetch/src/sync/meta/: mod.rs
src/: main.rs  management.rs  meta.rs  server.rs  sync.rs  utils.rs
src/config/: mod.rs
