[package]
name = "relayfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
prost = "0.14.1"
reqwest = { version = "0.12.25", features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[features]
default = ["management"]
management = []

[build-dependencies]
tonic-prost-build = "0.14.2"
