[package]
name = "relayfetch"
version = "0.2.0"
edition = "2024"
authors = ["DingVero<dingvero@outlook.com>"]
description = "Relayfetch file sync & download server"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
header = "0.0.0"
log = "0.4.29"
openssl = { version = "0.10.75", features = ["vendored"] }
prost = "0.14.1"
reqwest = { version = "0.12.25", features = ["rustls-tls", "native-tls-vendored", "stream", "hickory-dns"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tonic = "0.14.2"
tonic-prost = "0.14.2"
walkdir = "2.5.0"

[features]
default = ["grpc_management", "http_management"]          # 默认启用 gRPC 管理端
grpc_management = ["management_core"]  # 启用 gRPC 管理服务
http_management = ["management_core"]  # 启用 HTTP 管理服务
management_core = []                   # 核心管理逻辑，不依赖任何协议

[build-dependencies]
tonic-prost-build = "0.14.2"
